--- a/PS_TypeScript/tsconfig.json
+++ b/PS_TypeScript/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es2015",
     "sourceMap": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "strict": true
   },
   "exclude": [
     "node_modules"
